public/style/style.css
.container {
  margin-top: 10%
}
/*.navcol{
/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ededed+56,feffff+100 */
background: #f3f4f5; /* Old browsers */
background: -moz-linear-gradient(top, #ffffff 0%, #ededed 56%, #feffff 100%); /* FF3.6-15 */
background: -webkit-linear-gradient(top, #ffffff 0%,#ededed 56%,#feffff 100%); /* Chrome10-25,Safari5.1-6 */
background: linear-gradient(to bottom, #ffffff 0%,#ededed 56%,#feffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#feffff',GradientType=0 ); /* IE6-9 */
copy
}*/

.navContainer {
  background-color: #ecf0f1;
}

.navbar {
  background-color: #fff;
  /*height: 7%;*/
}

.img-responsive2 {
  max-height: 15%;
  max-width: 15%
}

.btn {
  margin-right: 10px;
  border-radius: 0px
}

.btn-social {
  height: 42px;
  margin: 0 auto 10px;
  width: 380px;
}

button.close {
  color: #ff3f00;
  opacity: 0.75;
}

.login-form_inner-container {
  display: block;
}

.login-signup__sep {
  margin: 35px auto 35px;
  position: relative;
  width: 380px;
  border-top: 1px solid #d0d0d0;
  height: 0;
}

.login-signup__sep-text {
  background: #fff;
  border: 1px solid #d0d0d0;
  border-radius: 13px;
  color: #d0d0d0;
  font-size: 15px;
  height: 26px;
  left: 50%;
  line-height: 22px;
  margin: 0 0 0 -13px;
  position: absolute;
  text-align: center;
  top: -13px;
  width: 26px;
}

.modal_title {
  text-align: center;
  margin-top: 5px;
  margin-bottom: 5px;
}

.modal-body {
  padding: 25px 60px 50px;
}

.login-form__container {
}

.login_tagline {
  color: #b3b1b3;
  text-align: center;
  margin-bottom: 5%;
}

.login_labels {
  font-size: 16px;
  line-height: 1;
  margin: 0 auto;
  width: 380px;
  display: block;
  text-align: center;
}

.login_btn {
  background-color: #ff3f00;
  border: 0;
  display: block;
  width: 380px;
  height: 42px;
  line-height: 50%;
  margin: 18px auto 5%;
  font-size: 16px;
  color: #fff;
  cursor: pointer;
}

.login_inputs {
  width: 380px;
  margin: 8px auto 0px;
  border-radius: 0px;
}

.login_signup_redirect {
  font-size: 12px;
  line-height: 15px;
  margin: 10px 14% 0px;
  display: inline-block;
}

.mainBtns {
  margin-top: 0.75%;
  margin-right: 5%;
}

.navBtns {
  margin-left: 4%;
  margin-top: 0.2%;
}

.navSearch {
  margin-top: 2%;
}

.search_by_cat_container {
  margin-bottom: 10%
}

.label-default:before {
  content:'';

  width:1.30em;
  height:1.358em;

  background-image: -webkit-linear-gradient(left top, rgb(254, 218, 113), rgb(254, 186, 71));
  background-image: -moz-linear-gradient(left top, rgb(254, 218, 113), rgb(254, 186, 71));
  background-image: -o-linear-gradient(left top, rgb(254, 218, 113), rgb(254, 186, 71));
  background-image: -ms-linear-gradient(left top, rgb(254, 218, 113), rgb(254, 186, 71));
  background-image: linear-gradient(left top, rgb(254, 218, 113), rgb(254, 186, 71));
  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=1,StartColorStr='#feda71', EndColorStr='#feba47');

  position:absolute;
  left:-0.69em;
  top:.2em;

  -webkit-transform:rotate(45deg);
  -moz-transform:rotate(45deg);
  -o-transform:rotate(45deg);
  transform:rotate(45deg);

  border-left:1px solid #d99d38;
  border-bottom:1px solid #d99d38;

  -webkit-border-radius:0 0 0 0.25em;
  -moz-border-radius:0 0 0 0.25em;
  border-radius:0 0 0 0.25em;

  z-index:1;
}

.label-default {
  margin-right: 0.5%;

  float:left;
  margin:0 0 7px 20px;
  position:relative;

  font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size:0.75em;
  font-weight:bold;
  text-decoration:none;

  color:#996633;
  text-shadow:0px 1px 0px rgba(255,255,255,.4);

  padding:0.417em 0.417em 0.417em 0.917em;

  border-top:1px solid #d99d38;
  border-right:1px solid #d99d38;
  border-bottom:1px solid #d99d38;

  -webkit-border-radius:0 0.25em 0.25em 0;
  -moz-border-radius:0 0.25em 0.25em 0;
  border-radius:0 0.25em 0.25em 0;

  background-image: -webkit-linear-gradient(top, rgb(254, 218, 113), rgb(254, 186, 71));
  background-image: -moz-linear-gradient(top, rgb(254, 218, 113), rgb(254, 186, 71));
  background-image: -o-linear-gradient(top, rgb(254, 218, 113), rgb(254, 186, 71));
  background-image: -ms-linear-gradient(top, rgb(254, 218, 113), rgb(254, 186, 71));
  background-image: linear-gradient(top, rgb(254, 218, 113), rgb(254, 186, 71));
  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#feda71', EndColorStr='#feba47');

  -webkit-box-shadow:
      inset 0 1px 0 #faeaba,
      0 1px 1px rgba(0,0,0,.1);
  -moz-box-shadow:
      inset 0 1px 0 #faeaba,
      0 1px 1px rgba(0,0,0,.1);
  box-shadow:
      inset 0 1px 0 #faeaba,
      0 1px 1px rgba(0,0,0,.1);

  z-index:100;
}

.label-default:after {
  content:'';

  width:0.5em;
  height:0.5em;

  background:#fff;

  -webkit-border-radius:4.167em;
  -moz-border-radius:4.167em;
  border-radius:4.167em;

  border:1px solid #d99d38;

  -webkit-box-shadow:0 1px 0 #faeaba;
  -moz-box-shadow:0 1px 0 #faeaba;
  box-shadow:0 1px 0 #faeaba;

  position:absolute;
  top:0.667em;
  left:-0.083em;
  z-index:9999;
}

.label-default:hover {
  background-image: -webkit-linear-gradient(top, rgb(254, 225, 141), rgb(254, 200, 108));
  background-image: -moz-linear-gradient(top, rgb(254, 225, 141), rgb(254, 200, 108));
  background-image: -o-linear-gradient(top, rgb(254, 225, 141), rgb(254, 200, 108));
  background-image: -ms-linear-gradient(top, rgb(254, 225, 141), rgb(254, 200, 108));
  background-image: linear-gradient(top, rgb(254, 225, 141), rgb(254, 200, 108));
  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#fee18d', EndColorStr='#fec86c');

  border-color:#e1b160;
}

.label-default:hover:before {
  background-image: -webkit-linear-gradient(left top, rgb(254, 225, 141), rgb(254, 200, 108));
  background-image: -moz-linear-gradient(left top, rgb(254, 225, 141), rgb(254, 200, 108));
  background-image: -o-linear-gradient(left top, rgb(254, 225, 141), rgb(254, 200, 108));
  background-image: -ms-linear-gradient(left top, rgb(254, 225, 141), rgb(254, 200, 108));
  background-image: linear-gradient(left top, rgb(254, 225, 141), rgb(254, 200, 108));
  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=1,StartColorStr='#fee18d', EndColorStr='#fec86c');

  border-color:#e1b160;
}

.list-legend {
  margin-top: 20px
}

.list-group {
  border-radius: 0px
}

.list-group-item {
  border-radius: 0px !important;
  margin-bottom: 1% !important;
  padding: 0px;
}

.list_thumbnail {
  display: inline-block;
  width: 350px;
}

.list_overview_container {
  margin-top: 3%;
}

.login_favorite {
  display: inline-block;
}

.navbar-brand {
  padding: 0 !important;
  margin: 0 !important;
}

.navbar-brand>img {
  margin: 5% !important;
}

.nav-tabs {
  background-color: #e6e6e6;
}

.remove-comment {
  background: none;
  border: 0;
  line-height: 1;
  opacity: 0;
}

.remove-comment:hover {
  color: red;
}

.comment {
  border-bottom: 1px solid lightgrey;
  padding: 0.5rem 0
}

.comment p {
  font-size: 1.2rem;
  margin: 0
}

.comment strong {
  color: darkblue;
  margin-right: 5px
}

.comment:hover .remove-comment {
  opacity: 1
}

.comment-form input, textarea {
    width: 100%;
    border: 0;
    font-size: 1.3rem;
    padding: 1rem 0;
    border-bottom: 1px solid lightgrey;
    outline: none;
    resize: vertical
}

.button:hover {
  cursor: pointer
}

.media-heading {
  font-size: 1.75rem;
  text-decoration: none !important
}

.col-md-5 {
  padding: 0px;
}

.img-thumbnail {
  padding: 0px;
  border: none;
  border-radius: 0px;
}

.form-control {
  border-radius: 0px !important;
}

body {
  background-color: #f3f4f5;
}

.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover{
  z-index: 3;
  color: #fff;
  cursor: default;
  background-color: #ff3f00;
  border-color: #ff3f00;

}

.pagination>li>a, .pagination>li>span{

  position: relative;
  float: left;
  padding: 6px 12px;
  margin-left: -1px;
  line-height: 1.42857143;
  color: #ff3f00;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #ddd;
}

.pagination>li>a:hover{
  z-index: 2;
  color: #ff3f00;
  background-color: #eee;
  border-color: #ddd;
}
.pagination>.active>a:hover {
  z-index: 3;
  color: #fff;
  cursor: default;
  background-color: #fa5935;
  border-color: #fa5935;

}

